--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 			peremennaja2=parseFloat(document.anketa.dva.value);
 			rezultat=peremennaja1/peremennaja2;
 			document.anketa.otvet.value=rezultat;
-			if(peremennaja1=0 || peremennaja2=0)
+			if(rezultat === Infinity)
 			{
 				alert("Делить на 0 нельзя");
 				return;
-			};
+			}
 			
 		}
 		function stepen(){
