--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			peremennaja2=parseFloat(document.anketa.dva.value);
 			rezultat=peremennaja1/peremennaja2;
 			document.anketa.otvet.value=rezultat;
-			if(rezultat === Infinity)
+			if(rezultat == Infinity)
 			{
 				alert("Делить на 0 нельзя");
 				
